# ffengine

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  extract_assets.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
checkpoints/: C01_checkpoint.yaml  C02_checkpoint.yaml  C03_checkpoint.yaml  C03_handoff.md  C04_checkpoint.yaml  C04_handoff.md  C05_checkpoint.yaml  C05_handoff.md  C06_checkpoint.yaml  C06_handoff.md  C07_checkpoint.yaml  C07_handoff.md  C08_checkpoint.yaml  C08_handoff.md  C09_checkpoint.yaml  C09_handoff.md  C10_checkpoint.yaml  C10_handoff.md  C11_checkpoint.yaml  C11_handoff.md
dags/: connection_test_dag.py  dummy_test_dag.py  local_executor_smoke_dag.py
docker/: Dockerfile  docker-compose.local.debug.yml.example  docker-compose.test.yml  docker-compose.yml  seed_airflow_users.py  webserver_config.py
docs/: airflow-execution-api-bugfix.md  community_quickstart.md  debugpy-uat-playbook.md  github-organization-runbook.md  type-mapping-policy.md
ffengine_agent_execution_handbook_v2/: AGENTS.md  GEMINI.md  manifest.txt
ffengine_agent_execution_handbook_v2/context/: C01_PROJECT_SETUP.md  C02_DB_SESSION.md  C05_YAML_CONFIG.md  C06_PARTITION.md  C07_AIRFLOW.md  C08_ETL_STUDIO.md  C10_ERROR_HANDLING.md  C11_INTEGRATION_TEST.md  E02_QUEUE_RUNTIME.md
handbook/: AGENTS.md  CLAUDE.md  manifest.txt
plugins/: etl_studio_plugin.py  flow_studio_plugin.py
tests/: conftest.py
(+158 files in other folders)
